--- a/drivers/power/supply/Kconfig
+++ b/drivers/power/supply/Kconfig
@@ -986,4 +986,14 @@ config CHARGER_QCOM_SMB2
 	  adds support for the SMB2 switch mode battery charger found
 	  in PMI8998 and related PMICs.
 
+config BATTERY_SM5703
+	tristate "SiliconMitus SM5703 Fuel Gauge support"
+	depends on I2C
+	help
+	  Say Y here to enable support for the Fuel-Gauge unit of the SM5703
+	  multi-function device.
+
+	  This driver can also be built as a module. If so, the module will be
+	  called sm5703-fg.
+
 endif # POWER_SUPPLY
