--- a/arch/arm/boot/dts/qcom/qcom-msm8916-samsung-fortunaltezt.dts
+++ b/arch/arm/boot/dts/qcom/qcom-msm8916-samsung-fortunaltezt.dts
@@ -3,6 +3,6 @@
 #include "qcom-msm8916-smp.dtsi"
 
 &tsens {
-	/* The device crashes when accessing the SROT region for some reason */
+	/* FIXME: The device crashes when accessing the SROT region for some reason */
 	qcom,srot-locked;
 };
