--- a/kernel/configs/fumos.config
+++ b/kernel/configs/fumos.config
@@ -8,3 +8,7 @@ CONFIG_HID_SONY=m
 CONFIG_SONY_FF=y
 CONFIG_HID_BATTERY_STRENGTH=y
 CONFIG_SND_USB_AUDIO=m
+
+# USB FTDI Single Port Serial Driver
+CONFIG_USB_SERIAL=m
+CONFIG_USB_SERIAL_FTDI_SIO=m
