arm64: dts: qcom: msm8916-samsung-j3-common: Add accelerometer (v3)
J3 has ST LIS2HH12 accelerometer. Add support for it.

v2: Change interrupt to IRQ_TYPE_LEVEL_HIGH
Signed-off-by: Stephan Gerhold <stephan@gerhold.net>
v3: Move from msm8916-samsung-j5. Set vdd-supply to l5
Signed-off-by: Lin, Meng-Bo <linmengbo0689@protonmail.com>

--- a/arch/arm64/boot/dts/qcom/msm8916-samsung-j3-common.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8916-samsung-j3-common.dtsi
@@ -27,11 +27,20 @@
 	};
 };
 
+&accelerometer {
+	vdd-supply = <&pm8916_l5>;
+	vddio-supply = <&pm8916_l5>;
+};
+
 &front_flash_led {
 	status = "disabled";
 };
 
 &gpio_hall_sensor {
+	status = "disabled";
+};
+
+&i2c_sensors {
 	status = "disabled";
 };
 
