--- a/kernel/configs/fumos.config
+++ b/kernel/configs/fumos.config
@@ -9,6 +9,10 @@ CONFIG_SONY_FF=y
 CONFIG_HID_BATTERY_STRENGTH=y
 CONFIG_SND_USB_AUDIO=m
 
+CONFIG_HID_PLAYSTATION=m
+CONFIG_PLAYSTATION_FF=y
+CONFIG_LEDS_CLASS_MULTICOLOR=y
+
 # USB FTDI Single Port Serial Driver
 CONFIG_USB_SERIAL=m
 CONFIG_USB_SERIAL_FTDI_SIO=m
